Fix height stretch and calculator position

--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ The designs were created to the following widths:
 ## Colors
 
  */
+
+
 :root {
   /* ### Primary */
 
@@ -56,8 +58,11 @@ body {
 .calculator {
   width: 95vw;
   max-width: 500px;
-  height: 65vh;
-  margin: 60px auto;
+  height: 451px;
+  position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   padding: 30px 20px;
   border-radius: 30px;
   border-bottom-right-radius: 70px;
@@ -210,4 +215,11 @@ body {
 .calculator .data .h1 span:nth-of-type(1) {
   color: var(--Purple);
   font-weight: var(--Weight1);
+}
+
+.attribution {
+  position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
 }
